--- a/app/sass/blocks/blades.sass
+++ b/app/sass/blocks/blades.sass
@@ -1,4 +1,5 @@
 #new-landing .blades
+	margin: 50px 0
 	@include mq($max-width: 1200px)
 		margin-bottom: 50px
 	.slick-arrow
