--- a/app/sass/blocks/new-clippers.sass
+++ b/app/sass/blocks/new-clippers.sass
@@ -5,9 +5,9 @@
 			max-width: 1000px
 	.caption
 		color: $white
-		margin-bottom: 100px
+		margin-bottom: 50px
 		@include mq($max-width: 575px)
-			margin-bottom: 40px
+			margin-bottom: 30px
 		&__title
 			padding: 15px 25px
 			background: linear-gradient(87.79deg, #8E8E8E 5.67%, rgba(255, 255, 255, 0.99) 79.63%), #C4C4C4
