--- a/app/sass/blocks/types-clippers.sass
+++ b/app/sass/blocks/types-clippers.sass
@@ -1,20 +1,16 @@
 #new-landing .types-clippers
-	padding: 150px 0
+	padding: 50px 0 100px
 	@include mq($max-width: 1000px)
 		padding: 20px 0 50px
-	.container
-		position: relative
-		min-height: 850px
-		max-width: 1000px
 	.caption
 		&__title
 			color: $white
 			background: linear-gradient(87.79deg, #8E8E8E 5.67%, rgba(255, 255, 255, 0.99) 79.63%), #C4C4C4
 			padding: 15px 25px
 	.items
-		width: 970px
-		height: 770px
-		margin-bottom: 50px
+		width: 800px
+		height: 700px
+		margin: 0 auto
 		position: relative
 		@include mq($max-width: 1200px)
 			display: flex
@@ -24,8 +20,8 @@
 			height: auto
 			margin-bottom: 40px
 	.item
-		height: 380px
-		width: 155px
+		height: 300px
+		width: 125px
 		position: absolute
 		@include mq($max-width: 1200px)
 			width: 48%
